[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/controls_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/team_selection/team_selection_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/minimap_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="FontFile" id=6]
[ext_resource path="res://ui/orders_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/buttons.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/leaders_icons.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/waterfall/main.tscn" type="PackedScene" id=17]
[ext_resource path="res://ui/scoreboard/score_board.tscn" type="PackedScene" id=18]
[ext_resource path="res://ui/cheat_console.gd" type="Script" id=19]
[ext_resource path="res://ui/main_menu.tscn" type="PackedScene" id=20]

[sub_resource type="FontFile" id=17]
size = 11
font_data = ExtResource( 6 )

[node name="ui" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -366.0 ],
"_editor_description_": "Prevents ui panning"
}

[node name="background" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="main" parent="background" instance=ExtResource( 17 )]
process_mode = 2
position = Vector2( -528, -300 )
scale = Vector2( 1.666, 1.666 )

[node name="top_left" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="top_left"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 2.0
offset_right = 124.0
offset_bottom = 32.0
custom_fonts/font = SubResource( 17 )
text = "fps
"

[node name="top_mid" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5

[node name="main_label" type="Label" parent="top_mid"]
unique_name_in_owner = true
offset_left = -150.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 32.0
custom_fonts/font = SubResource( 17 )
text = "shotcaller
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_right" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" parent="top_right" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="mid_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="mid" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="main_menu" parent="mid" instance=ExtResource( 20 )]
unique_name_in_owner = true

[node name="team_selection_menu" parent="mid" instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false
offset_left = -229.0
offset_top = -204.0
offset_right = 231.0
offset_bottom = 236.0

[node name="mid_left" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leaders_icons" parent="mid_left" instance=ExtResource( 12 )]
unique_name_in_owner = true

[node name="bot_left" type="Control" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0

[node name="minimap_container" parent="bot_left" instance=ExtResource( 5 )]
unique_name_in_owner = true

[node name="bot_mid" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="stats" parent="bot_mid" instance=ExtResource( 9 )]
unique_name_in_owner = true

[node name="bot_right" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="orders_menu" parent="bot_right" instance=ExtResource( 7 )]
unique_name_in_owner = true

[node name="controls_menu" parent="bot_right" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="buttons" parent="bot_right" instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="score_board" parent="." instance=ExtResource( 18 )]
process_mode = 2
visible = false
mouse_filter = 1

[node name="CheatConsole" type="TextEdit" parent="."]
process_mode = 2
offset_left = 3.0
offset_top = 90.0
offset_right = 130.0
offset_bottom = 107.0
context_menu_enabled = false
shortcut_keys_enabled = false
script = ExtResource( 19 )
